First implementation of board